# src/api/routes/user.routes.ts
@@ -3,5 +3,8 @@ import { userController } from '../controllers';
 const router = Router();
 
 router.get('/signup/:mobileNumber', userController.sendOtpToUser);
+router.post('/verify-otp', userController.verifyOtp);
+router.post('/save-user', userController.saveUser);
+router.post('/login-user', userController.loginUser);
 
 export default router;
